@@ -140,4 +140,23 @@ standard Firefox View->Sidebar menu. Add-ons, Preferences and Downloads are
 also available in the sidebar.
 ________________________________________________________________________________
 
+|:tbshow| |:toolbarshow| +
+||:toolbarshow {name}||
+________________________________________________________________________________
+Shows the named toolbar.
+________________________________________________________________________________
+
+|:tbhide| |:toolbarhide| +
+||:toolbarhide {name}||
+________________________________________________________________________________
+Hides the named toolbar.
+________________________________________________________________________________
+
+|:tbtoggle| |:toolbartoggle| +
+||:toolbartoggle {name}||
+________________________________________________________________________________
+Toggles the named toolbar.
+________________________________________________________________________________
+
+
 // vim: set filetype=asciidoc:
