@@ -258,6 +258,9 @@ section:Ex{nbsp}commands[ex-cmd-index,:index]
 ||[c]:tabprevious[c]|| Switch to the previous tab or go [count] tabs back +
 ||[c]:tabrewind[c]|| Switch to the first tab +
 ||[c]:time[c]|| Profile a piece of code or run a command multiple times +
+||[c]toolbarshow[c]|| Show the named toolbar +
+||[c]toolbarhide[c]|| Hide the named toolbar +
+||[c]toolbartoggle[c]|| Toggle the named toolbar +
 ||[c]:unabbreviate[c]|| Remove an abbreviation +
 ||[c]:undo[c]|| Undo closing of a tab +
 ||[c]:undoall[c]|| Undo closing of all closed tabs +
