@@ -16,6 +16,7 @@
     * IMPORTANT: shifted key notation now matches Vim's behaviour. E.g. <C-a>
       and <C-A> are equivalent, to map the uppercase character use <C-S-A>.
 
+    * add [c]:toolbaropen[c], [c]:toolbarclose[c], and [c]:toolbartoggle[c]
     * make [c]:open[c] behavior match that of [c]:tabopen[c] and [c]:winopen[c]
       when no argument is specified
     * add extension related commands - [c]:extadd[c], [c]:extdelete[c],
